--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     
     <body style="background-color: white; margin: 0px;">
         <header>
-            <img style="float: left; height: 50px; width: 50px;" src="Images/logo.png" alt = "logo">
+            <img style="float: left; height: 50px; width: 50px;" src="images/logo.png" alt = "logo">
             <h1 style="margin: 0px; padding: 0px; color: white;">www.WorldSoccerRankings.com</h1>
         </header>
         <main>
